meja/tests/newtype-gadt-no-inspect.stderr
File "tests/newtype-gadt-no-inspect.meja", line 5, characters 6-10:
Error: Cannot unify _ and t(int)
