meja/tests/newtype-gadt-no-inspect.meja
type t('a) = A(int) : t(int) | B(bool) : t(bool);

let f = fun (type t, x : t) => {
  switch (x) {
    | A(_) => 15
    | B(_) => 20
  };
};
